companies/REZ-Merchant/REZ-atlas-v2/atlas-engage/kubernetes/service.yaml
# Atlas Engage - Kubernetes Service
apiVersion: v1
kind: Service
metadata:
  name: atlas-engage
  namespace: rez-merchant
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5165
      targetPort: 5165
  selector:
    app: atlas-engage
